--- a/styles.css
+++ b/styles.css
@@ -1,63 +1,136 @@
-#right-panel {
-        font-family: 'Roboto','sans-serif';
-        line-height: 30px;
-        background-color: white;
-        padding: 20px;
-        margin: 20px;
-        border-width: 2px;
-        width: 26%;
-        height: 520px;
-        float: left;
-        text-align: left;
-        position: absolute;
-        top: 0px;
-        right: 0px;
-        border-radius: 20px;
-        background-color: rgba(110, 16, 147, 0.7);
-      }
+#options {
+	background-color: black;
+	height: 70px;
+	color: white;
+	position:fixed;
+	width: 100%;
+}
 
-      #right-panel select, #right-panel input {
-        font-size: 15px;
-      }
+#options ul {
+	margin: 0px;
+}
 
-      #right-panel select {
-        width: 100%;
-      }
+#options li{
+	
+	float: left;
+	list-style: none;
+	padding: 25.5px 20px;
+	font-size: 18px;
+	border-right: 1px solid #5B2D2F;
+	border-right: 1px solid white;
+}
 
-      #right-panel i {
-        font-size: 12px;
-      }
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        color: white;
-      }
-      #map {
-        height: 100%;
-        float: left;
-        width: 100%;
-      }
-      
-      #directions-panel {
-        margin-top: 10px;
-        background-color: #FFEE77;
-        padding: 10px;
-      }
-      
-      .ui-datepicker {
-    	background: #d6c3dd;
-    	border-radius: 4px;
-	  }
+#options a {
+	text-decoration: none;
+	color: white;
+}
+
+#options a:hover {
+	color: rgb(110, 16, 147);
+}
+
+#cabpool {
+	padding: 17px 30px 17px 50px;
+	margin-left: 10px;
+	padding-right: 50px;
+	font-size: 30px;
+	float: left;
+	border-right: 1px solid #5B2D2F;
+	border-right: 2px solid white;
+}
+
+#logout
+{
+	padding: 23px 10px 23px 10px;
+	margin-left: 10px;
+	padding-right: 20px;
+	font-size: 20px;
+	float: right;
+}
+
+select {
+	margin-bottom: 20px;
+}
+
+.fixedwidth {
+	padding: 50px 30px 0px 30px;
+	width: 640px;
+	margin: 0 auto;
+	height: 100%;
+}	
+
+.clear
+{
+	clear: both;
+}
+	 
+input:focus {
+	border: 1px solid #6e1093;
+	outline: none;
+}	
+
+.post-container {
+	border-radius: 11px;
+	margin-bottom: 40px;
+	
+}
+
+.post-header {
+	padding: 10px;
+	border-radius: 10px 10px 0px 0px;
+	border: 1px black solid;
+	border: none;
+	border-bottom: 2px rgb(110, 16, 147) solid;
+	background-color: rgba(110, 16, 147, 0.7);
+	background-color: black;
+}
+
+.post-text {
+	padding: 30px 40px 30px 40px;
+	background-color: #F2F2F2;
+	background-color: #e6e6e6;
+	border-radius: 0px 0px 10px 10px;
+	border: 1px black solid;
+	border-top: none;
+	border: none;
+	text-align: justify;
+	color: black;
+	font-size: 16px;
+	border-bottom: 3px #e67300 inset;
+	border: none;
+	background-color: rgba(110, 16, 147, 0.3);
+	background-color: rgba(255, 255, 255, 0.8);
+}
+
+button {
+	outline: 0;
+	float: right;
+	height: 30px;
+	width: 70px;
+	background-color: rgb(141, 46, 178);
+	//border: 1px solid gray;
+	border: none;
+	border-radius: 3px;
+	font-size: 12px;
+	color: white;
+	position: relative;
+	bottom: 10px;
+	margin-right: 10px;
+} 
+
+button:hover {
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+button:active {
+  transform: translateY(1px);
+}
+
+.join:hover {
+    background-color: #4CAF50; /* Green */
+}
+
+.leave:hover {
+	background-color: #f44336;
+}
 	  
-	  #submit
-	  {
-	  	background-color: #f9f2fc;
-	  	margin-left: 70px;
-	  	margin-top: 10px;
-	  	width: 200px;
-	  	border: 1px solid gray;
-	  	height: 50px;
-	  	font-size: 30px;
-	  	
-	  }
